chore: improve start command